controller revision/testing

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
-MONGODB_URI=mongodb+srv://chimou:capstone@cluster0.ovtlhby.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+THE_MOVIE_DB_API_KEY = 14d60f3530647ba7d89f7c3d37a1165e
+openai_api_key = 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
+MONGODB_URI = mongodb+srv://chimou:capstone@cluster0.ovtlhby.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
